fixes some h1 alignment, comments out screen breaks

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -84,11 +84,11 @@
     }
 }
 
-@media screen and (max-width: 1200px) {
-    .stage-cube-cont {
-        position: initial;
-        width: 100%;
-        height: 0%;
-        overflow: visible;
-    }
-}
+// @media screen and (max-width: 1200px) {
+//     .stage-cube-cont {
+//         position: initial;
+//         width: 100%;
+//         height: 0%;
+//         overflow: visible;
+//     }
+// }
