--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -120,15 +120,15 @@
     animation-fill-mode: forwards;
 }
 
-@media screen and (max-width: 1200px) {
-    .map-wrap {
-        float: none;
-        width: 100%;
-        height: 400px;
-        margin: 0;
-    }
+// @media screen and (max-width: 1200px) {
+//     .map-wrap {
+//         float: none;
+//         width: 100%;
+//         height: 400px;
+//         margin: 0;
+//     }
 
-    .info-map {
-        display: none;
-    }
-}
+//     .info-map {
+//         display: none;
+//     }
+// }
