--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -119,33 +119,33 @@
     }
 }
 
-@media screen and (max-width: 1200px) {
-    .page {
-        position: initial;
-    }
+// @media screen and (max-width: 1200px) {
+//     .page {
+//         position: initial;
+//     }
 
-    .container {
-        position: initial;
-        height: auto;
-        min-height: auto;
+//     .container {
+//         position: initial;
+//         height: auto;
+//         min-height: auto;
 
-        &.about-page,
-        &.contact-page,
-        &.portfolio-page,
-        &.home-page {
+//         &.about-page,
+//         &.contact-page,
+//         &.portfolio-page,
+//         &.home-page {
 
-            .text-zone {
-                position: initial;
-                transform: none;
-                width: 100%;
-                display: block;
-                padding: 20px;
-                box-sizing: border-box; 
-            }
+//             .text-zone {
+//                 position: initial;
+//                 transform: none;
+//                 width: 100%;
+//                 display: block;
+//                 padding: 20px;
+//                 box-sizing: border-box; 
+//             }
 
-            .solid-logo {
-                    display: none;
-            }
-        }
-    }
-}
+//             .solid-logo {
+//                     display: none;
+//             }
+//         }
+//     }
+// }
